--- a/index.html
+++ b/index.html
@@ -2,20 +2,23 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,500,600,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/master.css">
         <title>HubSpot Es.11</title>
     </head>
     <body>
         <div class="container-fullwidth">
-            <section class="container header">
-                <img src="#" alt="logo HubSpot">
-                <nav>
+            <section class="container header clearfix">
+                <div id="logo">
+                    <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_color.svg" alt="logo HubSpot">
+                </div>
+                <nav id="navbar" class="clearfix">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>software <span class="symbol">&#9660;</span></li>
+                        <li>pricing</li>
+                        <li>resources <span class="symbol">&#9660;</span></li>
+                        <li>partners <span class="symbol">&#9660;</span></li>
+                        <li>about <span class="symbol">&#9660;</span></li>
                     </ul>
                 </nav>
             </section>
@@ -83,8 +86,9 @@
                         <li><a href="#">Français</a></li>
                     </ul>
                 </div>
-                <hr>
-                <footer></footer>
+                <footer>
+                    spspps
+                </footer>
             </section>
         </div>
     </body>
