--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,500,600,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/master.css">
         <title>HubSpot Es.11</title>
     </head>
@@ -24,9 +24,11 @@
             </section>
         </div>
         <div class="container-fullwidth first">
-            <section class="container">
-                <p><strong>Always easy. Now deeply powerful. </strong>We've packed even more enterprise features into HubSpot's marketing software. Say hello to Marketing Hub Enterprise 2020.</p>
-                <button class="btn-WB">Learn more</button>
+            <section class="container clearfix">
+                <p><span>Always easy. Now deeply powerful. </span>We've packed even more enterprise features into HubSpot's marketing software. Say hello to Marketing Hub Enterprise 2020.</p>
+                <div class="button clearfix">
+                    <button class="btn-wb">Learn more</button>
+                </div>
             </section>
         </div>
         <div class="container-fullwidth second">
