Creazione seconda fascia

--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
         <div class="container-fullwidth first">
             <section class="container clearfix">
                 <p><span>Always easy. Now deeply powerful. </span>We've packed even more enterprise features into HubSpot's marketing software. Say hello to Marketing Hub Enterprise 2020.</p>
-                <div class="button clearfix">
-                    <button class="btn-wb">Learn more</button>
-                </div>
+                <button class="btn-wb">Learn more</span>
             </section>
         </div>
         <div class="container-fullwidth second">
