Creazione terza fascia

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="container-fullwidth first">
             <section class="container clearfix">
                 <p><span>Always easy. Now deeply powerful. </span>We've packed even more enterprise features into HubSpot's marketing software. Say hello to Marketing Hub Enterprise 2020.</p>
-                <button class="btn-wb">Learn more</span>
+                <button class="btn-wb"><a href="#">Learn more</a></span>
             </section>
         </div>
         <div class="container-fullwidth second">
@@ -34,27 +34,109 @@
                 <div class="jumbotron">
                     <h1>There’s a better way to grow.</h1>
                     <p>Marketing, sales, and service software that helps your business grow without compromise. Because “good for the business” should also mean “good for the customer.”</p>
-                    <button class="btn-WO btn-big">Get HubSpot free</button>
+                    <button class="btn-wo btn-big">Get HubSpot free</button>
                     <p>Get started with FREE tools, and upgrade as you grow.</p>
                 </div>
             </section>
         </div>
+        <div id="color" class="container-fullwidth"></div>
         <div class="container-fullwidth third">
             <section class="container small">
                 <div class="powerful">
-
+                    <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/2018/Integrations_Illustration@2x.png" alt="cubo">
+                    <h2>Powerful alone. Better together.</h2>
+                    <p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They’re powerful alone — but even better when used together.</p>
                 </div>
-                <div class="free-Hub">
-
+                <div class="free-hub clearfix">
+                    <div class="cta-libro">
+                        <div>
+                            <img src="https://cdn2.hubspot.net/hubfs/53/assets/hubspot.com/_style-guide/sword-sprocket/CRM-Illustration.svg" alt="libro">
+                        </div>
+                        <div>
+                            <button class="btn-wo btn-medium">Get free CRM</button>
+                        </div>
+                    </div>
+                    <div class="popular-features clearfix">
+                        <div class="box clearfix">
+                            <h4 class="titolo-carte">Free HubSpot CRM</h4>
+                            <p class="testo-carte">Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
+                        </div>
+                        <div id="testo-linea">
+                            <p>Popular Features</p>
+                        </div>
+                        <div class="lista">
+                            <ul>
+                                <li><span class="check-orange">&#9745;</span>Contact Insights</li>
+                                <li><span class="check-orange">&#9745;</span>Deals</li>
+                                <li><span class="check-orange">&#9745;</span>Tasks</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="card">
-
+                <div class="clearfix">
+                    <div class="card">
+                        <div id="card-sinistra" class="content">
+                            <img src="https://www.hubspot.com/hubfs/Marketing-Hub-Free.svg" alt="marketing hub">
+                            <h4 class="titolo-carte ">Marketing Hub</h4>
+                            <p class="testo-carte">Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                            <hr>
+                            <h5>popular features</h5>
+                            <div class="lista">
+                                <ul>
+                                    <li>Lead Generation</li>
+                                    <li>Marketing Automation</li>
+                                    <li>Analytics</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <button class="btn-wo">Get Started</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div id="card-centrale" class="content">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/Sales-Professional-Illustration.svg" alt="sales hub">
+                            <h4 class="titolo-carte ">Sales Hub</h4>
+                            <p class="testo-carte">Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.</p>
+                            <hr>
+                            <h5>popular features</h5>
+                            <div class="lista">
+                                <ul>
+                                    <li>Email Tracking</li>
+                                    <li>Meeting Scheduling</li>
+                                    <li>Email Automation</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <button class="btn-wo">Get Started</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div  id="card-destra" class="content">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/Service-Hub-Illustration.svg" alt=service hub>
+                            <h4 class="titolo-carte ">Service Hub</h4>
+                            <p class="testo-carte">Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business.</p>
+                            <hr>
+                            <h5>popular features</h5>
+                            <div class="lista">
+                                <ul>
+                                    <li>Tickets</li>
+                                    <li>Customer Feedback</li>
+                                    <li>Knowledge Base</li>
+                                </ul>
+                                <div>
+                                    <button class="btn-wo">Get Started</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </div>
         <div class="container-fullwidth fourth">
             <section class="container">
-                <div class="jumbotrone">
+                <div class="jumbotron">
                     <h3>Learn and grow with award-winning support and a thriving community behind you.</h3>
                     <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
                 </div>
@@ -68,7 +150,7 @@
                     <div class="brands"></div>
                 </div>
                 <div class="bottom">
-                    <div class="jumbotrone"></div>
+                    <div class="jumbotron"></div>
                     <img src="#" alt="profile Picture">
                 </div>
             </section>
