Fine stilizzazione cards

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                             <h4 class="titolo-carte">Free HubSpot CRM</h4>
                             <p class="testo-carte">Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
                         </div>
-                        <div id="testo-linea">
+                        <div class="testo-linea">
                             <p>Popular Features</p>
                         </div>
-                        <div class="lista">
+                        <div class="lista orizzontale">
                             <ul>
                                 <li><span class="check-orange">&#9745;</span>Contact Insights</li>
                                 <li><span class="check-orange">&#9745;</span>Deals</li>
@@ -79,17 +79,16 @@
                             <img src="https://www.hubspot.com/hubfs/Marketing-Hub-Free.svg" alt="marketing hub">
                             <h4 class="titolo-carte ">Marketing Hub</h4>
                             <p class="testo-carte">Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
-                            <hr>
-                            <h5>popular features</h5>
+                            <h5 class="testo-linea">popular features</h5>
                             <div class="lista">
                                 <ul>
-                                    <li>Lead Generation</li>
-                                    <li>Marketing Automation</li>
-                                    <li>Analytics</li>
+                                    <li><span class="check-orange">&#9745;</span>Lead Generation</li>
+                                    <li><span class="check-orange">&#9745;</span>Marketing Automation</li>
+                                    <li><span class="check-orange">&#9745;</span>Analytics</li>
                                 </ul>
                             </div>
                             <div>
-                                <button class="btn-wo">Get Started</button>
+                                <button class="btn-wo btn-medium">Get Started</button>
                             </div>
                         </div>
                     </div>
@@ -98,36 +97,34 @@
                             <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/Sales-Professional-Illustration.svg" alt="sales hub">
                             <h4 class="titolo-carte ">Sales Hub</h4>
                             <p class="testo-carte">Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.</p>
-                            <hr>
-                            <h5>popular features</h5>
+                            <h5 class="testo-linea">popular features</h5>
                             <div class="lista">
                                 <ul>
-                                    <li>Email Tracking</li>
-                                    <li>Meeting Scheduling</li>
-                                    <li>Email Automation</li>
+                                    <li><span class="check-orange">&#9745;</span>Email Tracking</li>
+                                    <li><span class="check-orange">&#9745;</span>Meeting Scheduling</li>
+                                    <li><span class="check-orange">&#9745;</span>Email Automation</li>
                                 </ul>
                             </div>
                             <div>
-                                <button class="btn-wo">Get Started</button>
+                                <button class="btn-wo btn-medium">Get Started</button>
                             </div>
                         </div>
                     </div>
                     <div class="card">
                         <div  id="card-destra" class="content">
                             <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/Service-Hub-Illustration.svg" alt=service hub>
-                            <h4 class="titolo-carte ">Service Hub</h4>
+                            <h4 class="titolo-carte">Service Hub</h4>
                             <p class="testo-carte">Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business.</p>
-                            <hr>
-                            <h5>popular features</h5>
+                            <h5 class="testo-linea">popular features</h5>
                             <div class="lista">
                                 <ul>
-                                    <li>Tickets</li>
-                                    <li>Customer Feedback</li>
-                                    <li>Knowledge Base</li>
+                                    <li><span class="check-orange">&#9745;</span>Tickets</li>
+                                    <li><span class="check-orange">&#9745;</span>Customer Feedback</li>
+                                    <li><span class="check-orange">&#9745;</span>Knowledge Base</li>
                                 </ul>
-                                <div>
-                                    <button class="btn-wo">Get Started</button>
-                                </div>
+                            </div>
+                            <div>
+                                <button class="btn-wo btn-medium">Get Started</button>
                             </div>
                         </div>
                     </div>
