Quarta fascia completa

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="powerful">
                     <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/2018/Integrations_Illustration@2x.png" alt="cubo">
                     <h2>Powerful alone. Better together.</h2>
-                    <p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They’re powerful alone — but even better when used together.</p>
+                    <p class="subtitle">HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They’re powerful alone — but even better when used together.</p>
                 </div>
                 <div class="free-hub clearfix">
                     <div class="cta-libro">
@@ -132,12 +132,69 @@
             </section>
         </div>
         <div class="container-fullwidth fourth">
-            <section class="container">
+            <section class="container small">
                 <div class="jumbotron">
-                    <h3>Learn and grow with award-winning support and a thriving community behind you.</h3>
-                    <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
+                    <h2>Learn and grow with award-winning support and a thriving community behind you.</h2>
+                    <p class="subtitle">You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
                 </div>
-                <div class="tabella"></div>
+                <div class="tabella clearfix">
+                    <div class="riquadro">
+                        <div class="hubspot-symbols">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="shaking hands">
+                        </div>
+                        <h2>150<span class="small-plus"> +</span></h2>
+                        <p>HubSpot user groups</p>
+                    </div>
+                    <div class="riquadro">
+                        <div class="hubspot-symbols">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_blog.svg" alt="hubspot blogs">
+                        </div>
+                        <h2>7M<span class="small-plus"> +</span></h2>
+                        <p>monthly visits</p>
+                    </div>
+                    <div class="riquadro">
+                        <div class="hubspot-symbols">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_academy.svg" alt="hubspot academy">
+                        </div>
+                        <h2>200K<span class="small-plus"> +</span></h2>
+                        <p>certified professionals</p>
+                    </div>
+                    <div class="riquadro riquadro-destra">
+                        <div class="hubspot-symbols">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_inbound.svg" alt="inbound">
+                        </div>
+                        <h2>26K<span class="small-plus"> +</span></h2>
+                        <p>registered attendees</p>
+                    </div>
+                    <div class="riquadro riga-sotto">
+                        <div class="hubspot-symbols">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_connect.svg" alt="hubspot connect">
+                        </div>
+                        <h2>350<span class="small-plus"> +</span></h2>
+                        <p>registered attendees</p>
+                    </div>
+                    <div class="riquadro riga-sotto">
+                        <div class="hubspot-symbols">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_globe.svg" alt="globe">
+                        </div>
+                        <h2>6<span class="small-plus"> +</span></h2>
+                        <p>registered attendees</p>
+                    </div>
+                    <div class="riquadro riga-sotto">
+                        <div class="hubspot-symbols">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_followers.svg" alt="chat">
+                        </div>
+                        <h2>2.6M<span class="small-plus"> +</span></h2>
+                        <p>registered attendees</p>
+                    </div>
+                    <div class="riquadro riga-sotto riquadro-destra">
+                        <div class="hubspot-symbols">
+                            <img id="symbol-small" src="https://www.hubspot.com/hubfs/growthhub-white-small-1.svg" alt="growth hub">
+                        </div>
+                        <h2>5K<span class="small-plus"> +</span></h2>
+                        <p>registered attendees</p>
+                    </div>
+                </div>
             </section>
         </div>
         <div class="container-fullwidth fifth">
