Creazione barra fissa

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
         <title>HubSpot Es.11</title>
     </head>
     <body>
+        <div class="container-fullwidth fixed-bar">
+            <div class="container clearfix">
+                <div class="lenguage-selector">
+                    <img src="https://cdn2.hubspot.net/hubfs/53/Logos/language-switcher-icon.svg" alt="">
+                    <span>English <span class="symbol">&#9660;</span></span>
+                </div>
+                <div class="contact">
+                    <a href="#">Contact Us</a>
+                </div>
+                <div class="cta-fixed-bar">
+                    <a id="magnifyng-glass" href="#">&#128270;</a>
+                    <button class="btn-wo login">Log In</button>
+                    <button class="btn-wo">Get HubSpot free</button>
+                </div>
+            </div>
+        </div>
         <div class="container-fullwidth">
             <section class="container header clearfix">
                 <div id="logo">
