--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="container-fullwidth second">
             <section class="container">
-                <div class="jumbotron">
+                <div class="jumbotron-big">
                     <h1>There’s a better way to grow.</h1>
                     <p>Marketing, sales, and service software that helps your business grow without compromise. Because “good for the business” should also mean “good for the customer.”</p>
                     <button class="btn-wo btn-big">Get HubSpot free</button>
@@ -215,13 +215,48 @@
         </div>
         <div class="container-fullwidth fifth">
             <section class="container">
-                <div class="top">
-                    <div class="stats"></div>
-                    <div class="brands"></div>
+                <div class="top clearfix">
+                    <div class="n-customer">
+                        <h2>68,800</h2>
+                        <p>customers in over <span>100</span> countries growing their businesses with HubSpot</p>
+                    </div>
+                    <div class="brands clearfix">
+                        <div class="riquadro-brand">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Atlassian-horizontal-blue@2x.png" alt="atlassian">
+                        </div>
+                        <div class="riquadro-brand">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/doordash_owler_20181011_194113_original@2x.png" alt="doordash">
+                        </div>
+                        <div class="riquadro-brand">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/g2crowd-logo@2x.png" alt="G2 crowd">
+                        </div>
+                        <div class="riquadro-brand">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/purple-logo@2x.png" alt="purple">
+                        </div>
+                        <div class="riquadro-brand">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Subaru_Logo_v2_186x63@2x.png" alt="subaru">
+                        </div>
+                        <div class="riquadro-brand">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Wistia_logo@2x.png" alt="wistia">
+                        </div>
+                        <div class="riquadro-brand">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Classpass-logo@2x.png" alt="classpass">
+                        </div>
+                        <div class="riquadro-brand">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/VMware_logo_gry_RGB_300dpi@2x.png" alt="vmware">
+                        </div>
+                    </div>
                 </div>
-                <div class="bottom">
-                    <div class="jumbotron"></div>
-                    <img src="#" alt="profile Picture">
+                <div class="bottom clearfix">
+                    <div class="jumbotron-big">
+                        <h2>Start Growing With HubSpot Today</h2>
+                        <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
+                        <button class="btn-wo btn-big">Get HubSpot free</button>
+                        <p> Get started with FREE tools, or get more with our premium software. </p>
+                    </div>
+                    <div class="ritratto clearfix">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/Variation-1@2x.png" alt="ritratto">
+                    </div>
                 </div>
             </section>
         </div>
