Inizio ultima fascia

--- a/index.html
+++ b/index.html
@@ -262,7 +262,51 @@
         </div>
         <div class="container-fullwidth sixth">
             <section class="container">
-                <div class="cards"></div>
+                <div class="indice clearfix">
+                    <div class="riquadro-elenco">
+                        <h5>Increase Your Traffic</h5>
+                        <ul>
+                            <li>ad software</li>
+                            <li>blog software</li>
+                            <li>SEO software</li>
+                            <li>social media software</li>
+                            <li>content management system</li>
+                        </ul>
+                    </div>
+                    <div class="riquadro-elenco">
+                        <h5>Connect With Leads</h5>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <div class="riquadro-elenco">
+                        <h5>Close and Manage Leads</h5>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <div class="riquadro-elenco">
+                        <h5>Support and Tools</h5>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+
+                </div>
                 <div class="lenguages">
                     <ul>
                         <li><a href="#">English</a></li>
