--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/b125f3be7d.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/master.css">
         <title>HubSpot Es.11</title>
     </head>
@@ -276,33 +277,44 @@
                     <div class="riquadro-elenco">
                         <h5>Connect With Leads</h5>
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>find new prospects</li>
+                            <li>email tracking</li>
+                            <li>sales email templates</li>
+                            <li>click to call your leads</li>
+                            <li>email marketing</li>
                         </ul>
                     </div>
                     <div class="riquadro-elenco">
                         <h5>Close and Manage Leads</h5>
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>document tracking tool</li>
+                            <li>meeting schedule tool</li>
+                            <li>sales automation tool</li>
+                            <li>lead management tool</li>
+                            <li>pipeline management tool</li>
                         </ul>
                     </div>
                     <div class="riquadro-elenco">
                         <h5>Support and Tools</h5>
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>hubSpot partners</li>
+                            <li>join a local user group</li>
+                            <li>get a free website report</li>
+                            <li>hubSpot templates</li>
+                            <li>free tools & generators &#9660;</li>
+                            <li>
+                                <button class="btn-wb">contact hubSpot support</button>
+                            </li>
+                            <li class="icone">
+                                <ul class="clearfix">
+                                    <li><i class="fab fa-facebook-f"></i></li>
+                                    <li><i class="fab fa-instagram"></i></li>
+                                    <li><i class="fab fa-youtube"></i></li>
+                                    <li><i class="fab fa-twitter"></i></li>
+                                    <li><i class="fab fa-linkedin-in"></i></li>
+                                    <li><i class="fab fa-medium-m"></i></li>
+                                </ul>
+                            </li>
                         </ul>
                     </div>
 
