--- a/index.html
+++ b/index.html
@@ -321,12 +321,12 @@
                 </div>
                 <div class="lenguages">
                     <ul>
-                        <li><a href="#">English</a></li>
-                        <li><a href="#">Deutsch</a></li>
-                        <li><a href="#">日本語</a></li>
-                        <li><a href="#">Español</a></li>
-                        <li><a href="#">Português</a></li>
-                        <li><a href="#">Français</a></li>
+                        <li>English</li>
+                        <li>Deutsch</li>
+                        <li>日本語</li>
+                        <li>Español</li>
+                        <li>Português</li>
+                        <li>Français</li>
                     </ul>
                 </div>
                 <footer>
