Fine sito statico

--- a/index.html
+++ b/index.html
@@ -330,9 +330,21 @@
                     </ul>
                 </div>
                 <footer>
-                    spspps
+                    <div id="logo-gray">
+                        <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_gray.svg" alt="logo HubSpot">
+                        <div id="copyright">
+                            <span>Copyright © 2020 HubSpot, Inc.</span>
+                        </div>
+                    </div>
+                    <div class="privacy">
+                        <span>legal stuff</span>
+                        <span>privacy policy</span>
+                    </div>
                 </footer>
             </section>
+        </div>
+        <div class="fixed-chat">
+            <i class="fas fa-comments"></i>
         </div>
     </body>
 </html>
