correzione e ordine codice html

--- a/index.html
+++ b/index.html
@@ -31,11 +31,19 @@
                 </div>
                 <nav id="navbar" class="clearfix">
                     <ul>
-                        <li>software <span class="symbol">&#9660;</span></li>
+                        <li>
+                            software <span class="symbol">&#9660;</span>
+                        </li>
                         <li>pricing</li>
-                        <li>resources <span class="symbol">&#9660;</span></li>
-                        <li>partners <span class="symbol">&#9660;</span></li>
-                        <li>about <span class="symbol">&#9660;</span></li>
+                        <li>
+                            resources <span class="symbol">&#9660;</span>
+                        </li>
+                        <li>
+                            partners <span class="symbol">&#9660;</span>
+                        </li>
+                        <li>
+                            about <span class="symbol">&#9660;</span>
+                        </li>
                     </ul>
                 </nav>
             </section>
@@ -43,7 +51,7 @@
         <div class="container-fullwidth first">
             <section class="container clearfix">
                 <p><span>Always easy. Now deeply powerful. </span>We've packed even more enterprise features into HubSpot's marketing software. Say hello to Marketing Hub Enterprise 2020.</p>
-                <button class="btn-wb"><a href="#">Learn more</a></span>
+                <button class="btn-wb">Learn more</button>
             </section>
         </div>
         <div class="container-fullwidth second">
@@ -83,9 +91,15 @@
                         </div>
                         <div class="lista orizzontale">
                             <ul>
-                                <li><span class="check-orange">&#9745;</span>Contact Insights</li>
-                                <li><span class="check-orange">&#9745;</span>Deals</li>
-                                <li><span class="check-orange">&#9745;</span>Tasks</li>
+                                <li>
+                                    <span class="check-orange">&#9745;</span>Contact Insights
+                                </li>
+                                <li>
+                                    <span class="check-orange">&#9745;</span>Deals
+                                </li>
+                                <li>
+                                    <span class="check-orange">&#9745;</span>Tasks
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -99,9 +113,15 @@
                             <h5 class="testo-linea">popular features</h5>
                             <div class="lista">
                                 <ul>
-                                    <li><span class="check-orange">&#9745;</span>Lead Generation</li>
-                                    <li><span class="check-orange">&#9745;</span>Marketing Automation</li>
-                                    <li><span class="check-orange">&#9745;</span>Analytics</li>
+                                    <li>
+                                        <span class="check-orange">&#9745;</span>Lead Generation
+                                    </li>
+                                    <li>
+                                        <span class="check-orange">&#9745;</span>Marketing Automation
+                                    </li>
+                                    <li>
+                                        <span class="check-orange">&#9745;</span>Analytics
+                                    </li>
                                 </ul>
                             </div>
                             <div>
@@ -117,9 +137,15 @@
                             <h5 class="testo-linea">popular features</h5>
                             <div class="lista">
                                 <ul>
-                                    <li><span class="check-orange">&#9745;</span>Email Tracking</li>
-                                    <li><span class="check-orange">&#9745;</span>Meeting Scheduling</li>
-                                    <li><span class="check-orange">&#9745;</span>Email Automation</li>
+                                    <li>
+                                        <span class="check-orange">&#9745;</span>Email Tracking
+                                    </li>
+                                    <li>
+                                        <span class="check-orange">&#9745;</span>Meeting Scheduling
+                                    </li>
+                                    <li>
+                                        <span class="check-orange">&#9745;</span>Email Automation
+                                    </li>
                                 </ul>
                             </div>
                             <div>
@@ -135,9 +161,15 @@
                             <h5 class="testo-linea">popular features</h5>
                             <div class="lista">
                                 <ul>
-                                    <li><span class="check-orange">&#9745;</span>Tickets</li>
-                                    <li><span class="check-orange">&#9745;</span>Customer Feedback</li>
-                                    <li><span class="check-orange">&#9745;</span>Knowledge Base</li>
+                                    <li>
+                                        <span class="check-orange">&#9745;</span>Tickets
+                                    </li>
+                                    <li>
+                                        <span class="check-orange">&#9745;</span>Customer Feedback
+                                    </li>
+                                    <li>
+                                        <span class="check-orange">&#9745;</span>Knowledge Base
+                                    </li>
                                 </ul>
                             </div>
                             <div>
@@ -267,52 +299,106 @@
                     <div class="riquadro-elenco">
                         <h5>Increase Your Traffic</h5>
                         <ul>
-                            <li>ad software</li>
-                            <li>blog software</li>
-                            <li>SEO software</li>
-                            <li>social media software</li>
-                            <li>content management system</li>
+                            <li>
+                                ad software
+                            </li>
+                            <li>
+                                blog software
+                            </li>
+                            <li>
+                                SEO software
+                            </li>
+                            <li>
+                                social media software
+                            </li>
+                            <li>
+                                content management system
+                            </li>
                         </ul>
                     </div>
                     <div class="riquadro-elenco">
                         <h5>Connect With Leads</h5>
                         <ul>
-                            <li>find new prospects</li>
-                            <li>email tracking</li>
-                            <li>sales email templates</li>
-                            <li>click to call your leads</li>
-                            <li>email marketing</li>
+                            <li>
+
+
+                                find new prospects
+                            </li>
+                            <li>
+                                email tracking
+                            </li>
+                            <li>
+                                sales email templates
+                            </li>
+                            <li>
+                                click to call your leads
+                            </li>
+                            <li>
+                                email marketing
+                            </li>
                         </ul>
                     </div>
                     <div class="riquadro-elenco">
                         <h5>Close and Manage Leads</h5>
                         <ul>
-                            <li>document tracking tool</li>
-                            <li>meeting schedule tool</li>
-                            <li>sales automation tool</li>
-                            <li>lead management tool</li>
-                            <li>pipeline management tool</li>
+                            <li>
+                                document tracking tool
+                            </li>
+                            <li>
+                                meeting schedule tool
+                            </li>
+                            <li>
+                                sales automation tool
+                            </li>
+                            <li>
+                                lead management tool
+                            </li>
+                            <li>
+                                pipeline management tool
+                            </li>
                         </ul>
                     </div>
                     <div class="riquadro-elenco">
                         <h5>Support and Tools</h5>
                         <ul>
-                            <li>hubSpot partners</li>
-                            <li>join a local user group</li>
-                            <li>get a free website report</li>
-                            <li>hubSpot templates</li>
-                            <li>free tools & generators &#9660;</li>
+                            <li>
+                                hubSpot partners
+                            </li>
+                            <li>
+                                join a local user group
+                            </li>
+                            <li>
+                                get a free website report
+                            </li>
+                            <li>
+                                hubSpot templates
+                            </li>
+                            <li>
+                                free tools & generators &#9660;
+                            </li>
                             <li>
                                 <button class="btn-wb">contact hubSpot support</button>
                             </li>
                             <li class="icone">
                                 <ul class="clearfix">
-                                    <li><i class="fab fa-facebook-f"></i></li>
-                                    <li><i class="fab fa-instagram"></i></li>
-                                    <li><i class="fab fa-youtube"></i></li>
-                                    <li><i class="fab fa-twitter"></i></li>
-                                    <li><i class="fab fa-linkedin-in"></i></li>
-                                    <li><i class="fab fa-medium-m"></i></li>
+                                    <li>
+                                        <i class="fab fa-facebook-f"></i>
+                                    </li>
+                                    <li>
+                                        <i class="fab fa-instagram"></i>
+                                    </li>
+                                    <li>
+                                        <i class="fab fa-youtube"></i>
+                                    </li>
+                                    <li>
+                                        <i class="fab fa-twitter"></i>
+                                    </li>
+                                    <li>
+                                        <i class="fab fa-linkedin-in"></i>
+                                    </li>
+                                    <li>
+                                        <i class="fab fa-medium-m"></i>
+                                    </li>
                                 </ul>
                             </li>
                         </ul>
@@ -321,12 +407,24 @@
                 </div>
                 <div class="lenguages">
                     <ul>
-                        <li>English</li>
-                        <li>Deutsch</li>
-                        <li>日本語</li>
-                        <li>Español</li>
-                        <li>Português</li>
-                        <li>Français</li>
+                        <li>
+                            English
+                        </li>
+                        <li>
+                            Deutsch
+                        </li>
+                        <li>
+                            日本語
+                        </li>
+                        <li>
+                            Español
+                        </li>
+                        <li>
+                            Português
+                        </li>
+                        <li>
+                            Français
+                        </li>
                     </ul>
                 </div>
                 <footer>
